--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1,45 +1,52 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Borderless Camera</title>
     <style>
         body {
             margin: 0;
-            overflow: hidden;            
+            overflow: hidden;
         }
+
         .spacerH {
             margin-left: 0.5vw;
             margin-right: 0.5vw;
         }
+
         .relButton {
             color: white;
-            background-color:gray;
-            float:left;
-            width:4vw;height:4vw;
-            text-align:center;
-            margin-top:0.4vw;
-            margin-bottom:0.4vw;
+            background-color: gray;
+            float: left;
+            width: 4vw;
+            height: 4vw;
+            text-align: center;
+            margin-top: 0.4vw;
+            margin-bottom: 0.4vw;
             border-radius: 1vw;
             font-size: 3.1vw;
             cursor: pointer;
         }
+
         .flipped {
             transform: scale(-1, 1);
             filter: FlipH;
         }
+
         #video {
-            z-index:0;
+            z-index: 0;
             /*transform: scale(-1, 1);
             filter: FlipH;       */
             /*opacity: 0.5;*/
             /*-webkit-app-region: drag;*/
             /*position: absolute;            */
         }
+
         #draggable {
-            z-index:5;
+            z-index: 5;
             position: absolute;
             width: 80vw;
             height: 40vw;
@@ -49,33 +56,36 @@
             margin: 10vw;
             /*display:none;*/
         }
+
         #overlayWrapper {
-          z-index:9;            
-          position: absolute;
-          margin: 2vw;
-          width: 96vw;
-          height: 57vw;
-          /*background: blue;*/
+            z-index: 9;
+            position: absolute;
+            margin: 2vw;
+            width: 96vw;
+            height: 57vw;
+            /*background: blue;*/
         }
+
         #overlay-panel {
-            z-index:10;
-            position: absolute;  
-            left:50%;
-            margin-left:-25%;       
+            z-index: 10;
+            position: absolute;
+            left: 50%;
+            margin-left: -25%;
             /* width: 53%; */
             /* height: 7%; */
-            background: #5d5d5d;            
+            background: #5d5d5d;
             /* -webkit-app-region: drag; */
             opacity: 0.5;
             margin-top: 50vw;
             /* display: none; */
             /*margin-left: 27%;*/
             border-radius: 1vw;
-            display:block;
+            display: block;
         }
     </style>
-  </head>
-  <body>
+</head>
+
+<body>
 
 
 
@@ -84,8 +94,7 @@
 
     <div overlayWrapper id="overlayWrapper">
         <div overlayPanel id="overlay-panel">
-            <div class="spacerH"
-                style="color: white;
+            <div class="spacerH" style="color: white;
                     font-family: sans-serif;
                     font-weight: bold;
                     font-size: 4vw;
@@ -109,7 +118,7 @@
 
     <script>
         var ipc = require('electron').ipcRenderer;
-        const {shell} = require('electron')
+        const { shell } = require('electron')
         var video = document.querySelector('[videoCanvas]');
         const version = ipc.sendSync('invokeAction', 'appVersion')
 
@@ -118,15 +127,17 @@
         // Prefer camera resolution nearest to 1280x720.
         navigator.mediaDevices.getUserMedia({
             audio: false,
-            video: { width: 1280, height: 720
-        } })
-        .then(function(mediaStream) {            
-            video.srcObject = mediaStream;
-            video.onloadedmetadata = function(e) {
-                video.play();
-            };
+            video: {
+                deviceId: "dabccd817ae7584b115e6d0ae1d2d317d399012132a3bcde77953b9b500dd5c0" ? { exact: "dabccd817ae7584b115e6d0ae1d2d317d399012132a3bcde77953b9b500dd5c0" } : undefined,
+            }
         })
-        .catch(function(err) { console.log(err.name + ": " + err.message); }); // always check for errors at the end.
+            .then(function (mediaStream) {
+                video.srcObject = mediaStream;
+                video.onloadedmetadata = function (e) {
+                    video.play();
+                };
+            })
+            .catch(function (err) { console.log(err.name + ": " + err.message); }); // always check for errors at the end.
 
         // content panel m x
         overlayPanelEl = document.querySelector('[overlayPanel]')
@@ -153,13 +164,13 @@
             if (currMs - enterMs > 1000) {
                 //console.log(currMs , enterMs)
                 enterMs = currMs
-                
+
                 clearTimeout(timeout);
-                timeout = setTimeout(function(){
-                  // console.log('onEnterAndHold',ev.clientX,ev.clientY, activeMode)
-                
-                  showPanel()
-                }, 1000);                          
+                timeout = setTimeout(function () {
+                    // console.log('onEnterAndHold',ev.clientX,ev.clientY, activeMode)
+
+                    showPanel()
+                }, 1000);
             }
 
         });
@@ -184,8 +195,22 @@
             if (ev.key === 'a') {
                 ipc.send('invokeAction', 'toggleAlwaysOnTop');
             }
+            if (ev.key === 'c') {
+
+
+                navigator.mediaDevices.enumerateDevices().then(function (devices) {
+                    devices.forEach(function (device) {
+                        ipc.send('invokeAction', device.kind + ": " + device.label +
+                            " id = " + device.deviceId);
+                    });
+                })
+                //ipc.send('invokeAction', 'gotDevices');
+            }
             //console.log(ev)
         });
+
+
+
 
         document.querySelector('[mirrorBtn]').addEventListener("click", (ev) => {
             // ipc.send('invokeAction', 'appQuit');
@@ -204,5 +229,6 @@
         })
 
     </script>
-  </body>
+</body>
+
 </html>
